// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Live Radio A11y I can see the skip to content link 1`] = `"Simbira ku birimwo"`;

exports[`Canonical Live Radio Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=40&amp;p=gahuza.bbc_gahuza_radio.liveradio.page&amp;x1=[urn%3Abbc%3Aares%3Aws_media%3Alive%3Abbc_gahuza_radio]&amp;x2=[responsive]&amp;x3=[news-gahuza]&amp;x4=[rw]&amp;x7=[player-live]&amp;x8=[simorgh-nojs]&amp;x9=[Radio%2BBBC%2BGahuza%2B-%2BBBC%2BNews%2BGahuza]\\"/>"`;

exports[`Canonical Live Radio Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/gahuza"`;

exports[`Canonical Live Radio Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. BBC ntibazwa ibivuye ku zindi mbuga. Soma ibijanye n'aho duhagaze ku mihora ijana ahandi"`;

exports[`Canonical Live Radio Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Gahuza",
  "url": "/gahuza",
}
`;

exports[`Canonical Live Radio Footer Link should match text and url 2`] = `
Object {
  "text": "Igituma ushobora kwizera BBC News",
  "url": "https://www.bbc.com/gahuza/institutional-49283343",
}
`;

exports[`Canonical Live Radio Footer Link should match text and url 3`] = `
Object {
  "text": "Ingingo zo gukoresha urubuga",
  "url": "https://www.bbc.com/gahuza/institutional-35754053",
}
`;

exports[`Canonical Live Radio Footer Link should match text and url 4`] = `
Object {
  "text": "Ibijanye na BBC",
  "url": "https://www.bbc.com/gahuza/institutional-35754055",
}
`;

exports[`Canonical Live Radio Footer Link should match text and url 5`] = `
Object {
  "text": "Ibigenga n'ubuzima bwite",
  "url": "https://www.bbc.com/gahuza/institutional-35754059",
}
`;

exports[`Canonical Live Radio Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Live Radio Footer Link should match text and url 7`] = `
Object {
  "text": "Vugana na BBC",
  "url": "https://www.bbc.com/gahuza/institutional-35754061",
}
`;

exports[`Canonical Live Radio Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Live Radio Footer Link should match text and url 9`] = `
Object {
  "text": "Soma ibijanye n'aho duhagaze ku mihora ijana ahandi",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Live Radio Header I can see the branding 1`] = `"BBC News, Gahuza"`;

exports[`Canonical Live Radio Header Navigation link should match text and url 1`] = `
Object {
  "text": "Urupapuro rw'itangiriro",
  "url": "/gahuza",
}
`;

exports[`Canonical Live Radio Header Navigation link should match text and url 2`] = `
Object {
  "text": "Amakuru",
  "url": "/gahuza/amakuru",
}
`;

exports[`Canonical Live Radio Header Navigation link should match text and url 3`] = `
Object {
  "text": "Imikino",
  "url": "/gahuza/imikino",
}
`;

exports[`Canonical Live Radio Header Navigation link should match text and url 4`] = `
Object {
  "text": "Video",
  "url": "/gahuza/media/video",
}
`;

exports[`Canonical Live Radio Main heading should match text 1`] = `"Radio BBC Gahuza"`;

exports[`Canonical Live Radio Media Player a11y assistive technology can read the media player title 1`] = `"Kina amajwi"`;

exports[`Canonical Live Radio Media Player iframe with valid URL should be rendered 1`] = `"https://test.bbc.com/ws/av-embeds/media/bbc_gahuza_radio/liveradio/rw?morph_env=live"`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Live Radio SEO Canonical link 1`] = `"http://localhost:7080/gahuza/bbc_gahuza_radio/liveradio"`;

exports[`Canonical Live Radio SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Live Radio SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Live Radio SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Live Radio SEO Heading level 1 1`] = `"Radio BBC Gahuza"`;

exports[`Canonical Live Radio SEO Lang attribute 1`] = `"rw"`;

exports[`Canonical Live Radio SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "RadioChannel",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/gahuza/bbc_gahuza_radio/liveradio",
        "@type": "WebPage",
        "name": "Radio BBC Gahuza",
      },
      "url": "http://localhost:7080/gahuza/bbc_gahuza_radio/liveradio",
    },
  ],
}
`;

exports[`Canonical Live Radio SEO OG description 1`] = `"Amakuru y’amahanga, ubusesenguzi, amakuru y’akarere k’ibiyaga bigari, ikinamico, ubuzima, imibereho y’abagore. Kuri FM no kuri internet."`;

exports[`Canonical Live Radio SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png"`;

exports[`Canonical Live Radio SEO OG image alt 1`] = `"BBC News Gahuza"`;

exports[`Canonical Live Radio SEO OG locale 1`] = `"rw-RW"`;

exports[`Canonical Live Radio SEO OG site name 1`] = `"BBC News Gahuza"`;

exports[`Canonical Live Radio SEO OG title 1`] = `"Radio BBC Gahuza - BBC News Gahuza"`;

exports[`Canonical Live Radio SEO OG type 1`] = `"website"`;

exports[`Canonical Live Radio SEO OG url 1`] = `"http://localhost:7080/gahuza/bbc_gahuza_radio/liveradio"`;

exports[`Canonical Live Radio SEO Page title 1`] = `"Radio BBC Gahuza - BBC News Gahuza"`;

exports[`Canonical Live Radio SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical Live Radio SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Live Radio SEO Twitter creator 1`] = `"@bbcgahuza"`;

exports[`Canonical Live Radio SEO Twitter description 1`] = `"Amakuru y’amahanga, ubusesenguzi, amakuru y’akarere k’ibiyaga bigari, ikinamico, ubuzima, imibereho y’abagore. Kuri FM no kuri internet."`;

exports[`Canonical Live Radio SEO Twitter image alt 1`] = `"BBC News Gahuza"`;

exports[`Canonical Live Radio SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png"`;

exports[`Canonical Live Radio SEO Twitter site 1`] = `"@bbcgahuza"`;

exports[`Canonical Live Radio SEO Twitter title 1`] = `"Radio BBC Gahuza - BBC News Gahuza"`;

exports[`Canonical Live Radio Summary should match text 1`] = `"Amakuru y’amahanga, ubusesenguzi, amakuru y’akarere k’ibiyaga bigari, ikinamico, ubuzima, imibereho y’abagore. Kuri FM no kuri internet."`;
